--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4.9.0"
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+serde = { version = "1.0.210", features = ["derive"] }
 
 [dev-dependencies]
 reqwest = "0.12.7"
