--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,27 @@ name = "zero2prod"
 
 [dependencies]
 actix-web = "4.9.0"
-tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+config = "0.14.0"
 serde = { version = "1.0.210", features = ["derive"] }
+tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+uuid = { version = "1.10.0", features = ["v4", "macro-diagnostics"] }
+
+[dependencies.chrono]
+version = "0.4.38"
+default-features = false
+features = ["clock"]
+
+[dependencies.sqlx]
+version = "0.8.2"
+default-features = false
+features = [
+  "runtime-tokio-rustls",
+  "macros",
+  "postgres",
+  "uuid",
+  "chrono",
+  "migrate"
+]
 
 [dev-dependencies]
 reqwest = "0.12.7"
