--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,8 @@ name = "zero2prod"
 [dependencies]
 actix-web = "4.9.0"
 config = "0.14.0"
+env_logger = "0.11.5"
+log = "0.4.22"
 serde = { version = "1.0.210", features = ["derive"] }
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
 uuid = { version = "1.10.0", features = ["v4", "macro-diagnostics"] }
