--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,9 @@ env_logger = "0.11.5"
 log = "0.4.22"
 serde = { version = "1.0.210", features = ["derive"] }
 tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
+tracing = { version = "0.1.40", features = ["log"] }
+tracing-bunyan-formatter = "0.3.9"
+tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "fmt"] }
 uuid = { version = "1.10.0", features = ["v4", "macro-diagnostics"] }
 
 [dependencies.chrono]
